@@ -1,3 +1,8 @@
+Mon May 24 14:19:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/CIF/Navigation/client.cpp:
+          Implemented error handling.
+
 Mon May 24 14:04:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
